# hft-hybrid-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  render.yaml  requirements.txt  start.sh
api/: main.py
api/core/: celery_app.py  config.py  database.py
api/routes/: auth.py  backtest.py  live.py  models.py  training.py
api/services/: engine_bridge.py
backend_cpp/include/: hardware_slab.h  matching_engine.h  order.h
engine/: .gitignore
engine/backend_cpp/: CMakeLists.txt
engine/backend_cpp/bindings/: pybind_module.cpp
engine/backend_cpp/include/: matching_engine.h  memory_pool.h
engine/backend_cpp/tests/: engine_benchmark.cpp
engine/rl_trading/envs/: __init__.py  trading_env.py
rl_trading/: __init__.py
rl_trading/envs/: __init__.py  trading_env.py
scripts/: evaluate.py  fetch_real_market_data.py  train.py  upload_models_to_storage.py
web/: .gitignore  package-lock.json  package.json  tailwind.config.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/backtest/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/train/: page.tsx
web/src/components/: Sidebar.tsx
web/src/components/charts/: HistoricalChart.tsx  LiveChart.tsx
web/src/lib/: api.ts  websocket.ts
web/src/store/: useTradingStore.ts  useTrainingStore.ts
worker/: main.py
worker/tasks/: rl_training.py
worker/utils/: data_downloader.py
